; ModuleID = '/home/carl/AnghaBench/no-more-secrets/src/extr_nmseffect.c_nmseffect_set_autodecrypt.c'
source_filename = "/home/carl/AnghaBench/no-more-secrets/src/extr_nmseffect.c_nmseffect_set_autodecrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@autoDecrypt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nmseffect_set_autodecrypt(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  store i32 1, i32* @autoDecrypt, align 4
  br label %7

6:                                                ; preds = %1
  store i32 0, i32* @autoDecrypt, align 4
  br label %7

7:                                                ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
